# Hra-Game-of-Life-s-ukladanim-vzorov-na-linux-serveri

./: Game of Life - dokumentácia.docx
GameOfLife/: Bunka.c  Bunka.h  CMakeLists.txt  CitacVzorov.c  CitacVzorov.h  Displej.c  Displej.h  Hra.c  Hra.h  Makefile  Vzor.c  Vzor.h  arraylist.h  client.c  client.h  main.c  server.c  server.h
GameOfLife/data/: objekty_life.txt
